--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
 				<img src="assets/images/github.png" alt="GitHub" width="60" height="60">
 			</a>
 
-			<a href="https://www.linkedin.com/profile/preview?locale=en_US&trk=prof-0-sb-preview-primary-button" target="_blank">
+			<a href="https://www.linkedin.com/in/rebecca-palmore-3a6b739/" target="_blank">
 				<img src="assets/images/linkedin.png" alt="LinkedIn" width="60" height="60">
 			</a>
 
