--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 			<img class="image" src="assets/images/FB.jpg" alt="Rebecca and Tom">
 
-			<p>Hi! I’m Rebecca. I currently work at WTTW, where I’m the digital editor for <a href="http://wttw.com/chicagotonight" target="_blank">Chicago Tonight</a>, a news and public affairs TV show and website. We cover local politics, education, culture, business, science and other topics. Before joining WTTW, I was a senior digital news editor at Chicago Tribune. You can find out more about my work history by <a href="https://www.linkedin.com/profile/preview?locale=en_US&trk=prof-0-sb-preview-primary-button" target="_blank">visiting my LinkedIn profile</a>.</p>
+			<p>Hi! I’m Rebecca. I currently work at WTTW, where I’m the digital editor for <a href="http://wttw.com/chicagotonight" target="_blank">Chicago Tonight</a>, a news and public affairs TV show and website. We cover local politics, education, culture, business, science and other topics. Before joining WTTW, I was a senior digital news editor at Chicago Tribune. You can find out more about my work history by <a href="https://www.linkedin.com/in/rebecca-palmore-3a6b739/" target="_blank">visiting my LinkedIn profile</a>.</p>
 
 			<p>This site is my first foray into web development, and I’m really excited to put my skills to the test. I’ve been writing very basic code for years and have always wanted to learn more. It’s not easy being a student again – especially with a demanding full-time job – but I love it.</p>
 
@@ -54,7 +54,7 @@
 				<img src="assets/images/github.png" alt="GitHub" width="60" height="60">
 			</a>
 	
-			<a href="https://www.linkedin.com/profile/preview?locale=en_US&trk=prof-0-sb-preview-primary-button" target="_blank">
+			<a href="https://www.linkedin.com/in/rebecca-palmore-3a6b739/" target="_blank">
 				<img src="assets/images/linkedin.png" alt="LinkedIn" width="60" height="60">
 			</a>
 
