--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
 
 			<a href="https://github.com/rpalmore" target="_blank"><img src="assets/images/github.png" alt="GitHub" width="60" height="60"></a>
 
-			<a href="https://www.linkedin.com/profile/preview?locale=en_US&trk=prof-0-sb-preview-primary-button" target="_blank"><img src="assets/images/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
+			<a href="https://www.linkedin.com/in/rebecca-palmore-3a6b739/" target="_blank"><img src="assets/images/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
 
 			<a href="http://stackoverflow.com/users/7361075/rebecca-palmore" target="_blank"><img src="assets/images/stackoverflow.png" alt="stackoverflow" width="60" height="60"></a>
 
